# web_HW14

./: .coverage  main.py  pyproject.toml  readme.md  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
front_end/: script.js
migrations/versions/: 211f0454da23_hw14.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py
src/schemas/: auth.py  contacts.py
src/services/: auth.py  mail.py
src/services/templates/: verify_email.html
tests/: conftest.py  test.db  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py
