[tool.poetry]
name = "hw13"
version = "0.1.0"
description = ""
authors = ["Mykola1601 <nik160186@gmail.com>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
requests = "^2.28.1"
xmltodict = "^0.13.0"
redis = "4.*"
fastapi-limiter = "^0.1.6"
jinja2 = "^3.1.3"
cloudinary = "1.37.0"
sphinx = "^7.2.6"
sqlalchemy = "^2.0.28"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
pytest = "^8.0.2"
pydantic = {extras = ["email"], version = "^2.6.3"}


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "tests", 
]
pythonpath = "."
